src/regression/parse_pool/progtest7.sfp.out

sfc in program: parse_pool/progtest7.sfp
syntax error at 3 at line:
bar { timer = 8192 }
^
