src/regression/parse_pool/progtest7.sfp
# Testing erroneous program definition (missing event-condition keyword)
configuration foo { nothing nothing }
bar { timer = 8192 }
start hello

